Apply restructuring to achievement context tests